--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "dungang/mjax",
+  "name": "dungang/yii2-mjax",
   "description": "Bootstrap Modal for Yii2 By Ajax ",
   "license": "MIT",
   "minimum-stability": "dev",
